log/build_2023-03-11_00-34-23/my_python_pkg/stderr.log
  File "/home/wward/ros2_workspace/install/my_python_pkg/lib/python3.10/site-packages/my_python_pkg/turtle_controller.py", line 57
    if desired_angle == 0 
                          ^
SyntaxError: expected ':'

